@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: ipmipower.h,v 1.42 2006-03-15 19:09:11 chu11 Exp $
+ *  $Id: ipmipower.h,v 1.43 2006-03-20 23:23:56 chu11 Exp $
  *****************************************************************************
  *  Copyright (C) 2003 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -564,7 +564,7 @@ struct ipmipower_config
   ipmipower_bool_t         force_permsg_authentication;
   ipmipower_bool_t         accept_session_id_zero;
   ipmipower_bool_t         check_unexpected_authcode;
-  
+  ipmipower_bool_t         cipher_suite_records_all_oem;
 #ifndef NDEBUG
   ipmipower_bool_t         debug;
   ipmipower_bool_t         ipmidump;
@@ -594,6 +594,7 @@ struct ipmipower_config
   ipmipower_bool_t         force_permsg_authentication_set;
   ipmipower_bool_t         accept_session_id_zero_set;
   ipmipower_bool_t         check_unexpected_authcode_set;
+  ipmipower_bool_t         cipher_suite_records_all_oem_set;
   ipmipower_bool_t         outputtype_set;
   ipmipower_bool_t         timeout_len_set;
   ipmipower_bool_t         retry_timeout_len_set;
